# ply-parsing-perf

./: .gitmodules  CMakeLists.txt  README.md  RESULTS-polymesh-transposed.md  RESULTS-polymesh.md  RESULTS-transposed.md  RESULTS.md  TODO.md  run-benchmarks-macos.sh  run-benchmarks-win10-laptop.sh
results-macos/: Stanford3DScans--precog.md  Stanford3DScans.md  benedikt-bitterli--precog.md  benedikt-bitterli-scenes--precog.md  benedikt-bitterli-scenes.md  benedikt-bitterli.md  pbrt-v3-scenes--precog.md  pbrt-v3-scenes.md  summary--precog.md  summary.md
results-win10-laptop/: Stanford3DScans--precog.md  Stanford3DScans.md  benedikt-bitterli--precog.md  benedikt-bitterli-scenes--precog.md  benedikt-bitterli-scenes.md  benedikt-bitterli.md  pbrt-v3-scenes--precog.md  pbrt-v3-scenes.md  summary--precog.md  summary.md
src/: main.cpp
